[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scenes/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/death_background.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/cat_bowl.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/tileSetJour.png" type="Texture" id=5]
[ext_resource path="res://Assets/tileSetDeath.png" type="Texture" id=6]
[ext_resource path="res://Assets/day_background.png" type="Texture" id=7]
[ext_resource path="res://sound/Chat_de_Schroedinger_mort.mp3" type="AudioStream" id=8]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=9]
[ext_resource path="res://sound/Chat_de_Schroedinger.mp3" type="AudioStream" id=10]
[ext_resource path="res://Scenes/Shared/Plateform_death.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Shared/Large_cube_life.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Shared/Cube_life.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Shared/platform_life.tscn" type="PackedScene" id=14]
[ext_resource path="res://Assets/A_Button.png" type="Texture" id=15]
[ext_resource path="res://Scripts/TutoTraitement.gd" type="Script" id=16]
[ext_resource path="res://Assets/RT_Button.png" type="Texture" id=17]
[ext_resource path="res://Assets/DPad_Button.png" type="Texture" id=19]
[ext_resource path="res://Font/CatPentagram.ttf" type="DynamicFontData" id=20]

[sub_resource type="ConcavePolygonShape2D" id=5]
segments = PoolVector2Array( 64, 37, 0, 37, 0, 37, 0, 0, 0, 0, 64, 0, 64, 0, 64, 37 )

[sub_resource type="TileSet" id=2]
0/name = "tileSetJour.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 384, 448 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 5 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 6 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 6 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 6 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 6 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 6 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=4]
1/name = "tileSetDeath.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 384, 448 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 64, 64 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 6 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 6 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 6 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 6 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 6 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 6 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 6 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="Theme" id=7]

[sub_resource type="DynamicFont" id=8]
size = 64
outline_size = 2
outline_color = Color( 0, 0.172549, 0.219608, 1 )
font_data = ExtResource( 20 )

[node name="Tuto" type="YSort"]
script = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}
Cat_bowl_PosX = 300
Cat_bowl_PosY = 300

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="EnvironmentParallax" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1024, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Death" type="Sprite" parent="ParallaxBackground/EnvironmentParallax"]
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Death2" type="Sprite" parent="ParallaxBackground/EnvironmentParallax"]
position = Vector2( 0, 598 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Day" type="Sprite" parent="ParallaxBackground/EnvironmentParallax"]
position = Vector2( -2053, -651 )
texture = ExtResource( 7 )
offset = Vector2( 2564, 350 )
__meta__ = {
"_edit_lock_": true
}

[node name="Day2" type="Sprite" parent="ParallaxBackground/EnvironmentParallax"]
position = Vector2( 511, -651 )
texture = ExtResource( 7 )
offset = Vector2( 0, -250 )
__meta__ = {
"_edit_lock_": true
}

[node name="Character" parent="." instance=ExtResource( 1 )]
position = Vector2( 206, -194 )
z_index = 1
max_speed = null

[node name="Camera2D2" type="Camera2D" parent="Character"]
current = true
__meta__ = {
"_edit_lock_": true
}

[node name="UI_Container" parent="." instance=ExtResource( 3 )]

[node name="Cat_bowl" parent="." instance=ExtResource( 4 )]
position = Vector2( 1840, -584 )

[node name="World_life_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true

[node name="World_death_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="World_back" type="Node2D" parent="."]
position = Vector2( 832, 0 )

[node name="World_of_life" type="TileMap" parent="World_back"]
position = Vector2( 0, 64 )
tile_set = SubResource( 2 )
cell_custom_transform = Transform2D( 128, 0, 0, 128, 0, 0 )
format = 1
tile_data = PoolIntArray( -1048589, 0, 1, -1048588, 0, 393216, -1048587, 0, 393216, -1048586, 0, 393216, -1048585, 0, 393216, -1048584, 0, 393216, -1048583, 0, 393216, -1048582, 0, 393216, -1048581, 0, 393216, -1048580, 0, 393216, -1048579, 0, 65537, -1048578, 0, 1, -1048577, 0, 393216, -1114112, 0, 393216, -1114111, 0, 393216, -1114110, 0, 393216, -1114109, 0, 393216, -1114108, 0, 393216, -1114107, 0, 393216, -1114106, 0, 393216, -1114105, 0, 393216, -1114104, 0, 393216, -1114103, 0, 393216, -1114102, 0, 393216, -1114101, 0, 393216, -1114100, 0, 393216, -1114099, 0, 393216, -1114098, 0, 393216, -1114097, 0, 393216, -1114096, 0, 393216, -1114095, 0, 393216, -1114094, 0, 393216, -1114093, 0, 393216, -1114092, 0, 65537, -983053, 0, 2, -983043, 0, 65538, -983042, 0, 2, -1048556, 0, 65538, -917517, 0, 2, -917507, 0, 65538, -917506, 0, 2, -983020, 0, 65538, -851981, 0, 2, -851971, 0, 65538, -851970, 0, 2, -917484, 0, 65538, -786445, 0, 2, -786435, 0, 65538, -786434, 0, 2, -851948, 0, 65538, -720909, 0, 2, -720899, 0, 65538, -720898, 0, 2, -786412, 0, 65538, -655373, 0, 2, -655363, 0, 65538, -655362, 0, 2, -720876, 0, 65538, -589837, 0, 2, -589827, 0, 65538, -589826, 0, 2, -655340, 0, 65538, -524301, 0, 2, -524291, 0, 65538, -524290, 0, 2, -589804, 0, 65538, -458765, 0, 2, -458755, 0, 65538, -458754, 0, 2, -524268, 0, 65538, -393229, 0, 2, -393219, 0, 65538, -393218, 0, 2, -458732, 0, 65538, -327693, 0, 2, -327683, 0, 65538, -327682, 0, 2, -393196, 0, 65538, -262157, 0, 2, -262147, 0, 65538, -262146, 0, 2, -327660, 0, 65538, -196621, 0, 2, -196611, 0, 65538, -196610, 0, 2, -262124, 0, 65538, -131085, 0, 2, -131075, 0, 65538, -131074, 0, 2, -196588, 0, 65538, -65549, 0, 131074, -65548, 0, 65540, -65547, 0, 65540, -65546, 0, 65540, -65545, 0, 65540, -65544, 0, 65540, -65543, 0, 65540, -65542, 0, 65540, -65541, 0, 65540, -65540, 0, 65540, -65539, 0, 5, -65538, 0, 3, -65537, 0, 65540, -131072, 0, 65540, -131071, 0, 65540, -131070, 0, 65540, -131069, 0, 65540, -131068, 0, 65540, -131067, 0, 65540, -131066, 0, 65540, -131065, 0, 65540, -131064, 0, 65540, -131063, 0, 65540, -131062, 0, 65540, -131061, 0, 65540, -131060, 0, 65540, -131059, 0, 65540, -131058, 0, 65540, -131057, 0, 65540, -131056, 0, 65540, -131055, 0, 65540, -131054, 0, 65540, -131053, 0, 196612, -131052, 0, 5, -65515, 10, 0, -65514, 10, 0, -65513, 10, 0, -65512, 10, 0, -65511, 10, 0, -65510, 10, 0, -65509, 10, 0 )

[node name="World_of_death" type="TileMap" parent="World_back"]
position = Vector2( 0, 64 )
tile_set = SubResource( 4 )
format = 1
tile_data = PoolIntArray( -851911, 1, 0, -786427, 5, 0, -589826, 2, 0, -589810, 6, 0, -458761, 2, 0, -458758, 2, 0, -524285, 5, 0, -327683, 5, 0, -196615, 5, 0, -262135, 6, 0, -262130, 6, 0, -131082, 2, 0, -13, 1, 262146, -12, 1, 1, -11, 1, 1, -10, 1, 1, -9, 1, 1, -8, 1, 1, -7, 1, 1, -6, 1, 1, -5, 1, 1, -4, 1, 1, -3, 1, 1, -2, 1, 1, -1, 1, 1, -65536, 1, 1, -65535, 1, 1, -65534, 1, 1, -65533, 1, 1, -65532, 1, 1, -65531, 1, 1, -65530, 1, 1, -65529, 1, 1, -65528, 1, 1, -65527, 1, 196610, -65526, 1, 262146, -65525, 1, 1, -65524, 1, 1, -65523, 1, 1, -65522, 1, 1, -65521, 1, 1, -65520, 1, 1, -65519, 1, 1, -65518, 1, 1, -65517, 1, 1, -65516, 1, 196610, 65523, 1, 131075, 9, 1, 393216, 10, 1, 131075, 20, 1, 393216, 131059, 1, 131075, 65545, 1, 393216, 65546, 1, 131075, 65556, 1, 393216, 196595, 1, 131075, 131081, 1, 393216, 131082, 1, 131075, 131092, 1, 393216, 262131, 1, 131075, 196617, 1, 393216, 196618, 1, 131075, 196628, 1, 393216, 327667, 1, 131075, 262153, 1, 393216, 262154, 1, 131075, 262164, 1, 393216, 393203, 1, 131075, 327689, 1, 393216, 327690, 1, 131075, 327700, 1, 393216, 458739, 1, 131075, 393225, 1, 393216, 393226, 1, 131075, 393236, 1, 393216, 524275, 1, 131075, 458761, 1, 393216, 458762, 1, 131075, 458772, 1, 393216, 589811, 1, 131075, 524297, 1, 393216, 524298, 1, 131075, 524308, 1, 393216, 655347, 1, 131075, 589833, 1, 393216, 589834, 1, 131075, 589844, 1, 393216, 720883, 1, 131075, 655369, 1, 393216, 655370, 1, 131075, 655380, 1, 393216, 786419, 1, 131075, 720905, 1, 393216, 720906, 1, 131075, 720916, 1, 393216, 851955, 1, 131076, 851956, 1, 262148, 851957, 1, 262148, 851958, 1, 262148, 851959, 1, 262148, 851960, 1, 262148, 851961, 1, 262148, 851962, 1, 262148, 851963, 1, 262148, 851964, 1, 262148, 851965, 1, 262148, 851966, 1, 262148, 851967, 1, 262148, 786432, 1, 262148, 786433, 1, 262148, 786434, 1, 262148, 786435, 1, 262148, 786436, 1, 262148, 786437, 1, 262148, 786438, 1, 262148, 786439, 1, 262148, 786440, 1, 262148, 786441, 1, 196612, 786442, 1, 131076, 786443, 1, 262148, 786444, 1, 262148, 786445, 1, 262148, 786446, 1, 262148, 786447, 1, 262148, 786448, 1, 262148, 786449, 1, 262148, 786450, 1, 262148, 786451, 1, 262148, 786452, 1, 196612 )

[node name="Plateform_death" parent="." instance=ExtResource( 11 )]
position = Vector2( 456, 112 )

[node name="Plateform_death2" parent="." instance=ExtResource( 11 )]
position = Vector2( 768, 232 )
distance = Vector2( 150, 0 )

[node name="Large_cube_life" parent="." instance=ExtResource( 13 )]
position = Vector2( 904, -336 )
distance = Vector2( 0, 100 )

[node name="Large_cube_life2" parent="." instance=ExtResource( 12 )]
position = Vector2( 1200, -328 )

[node name="platform_life" parent="." instance=ExtResource( 14 )]
position = Vector2( 1800, -400 )

[node name="Large_cube_life3" parent="." instance=ExtResource( 13 )]
position = Vector2( 1472, -384 )
duration = 5
distance = Vector2( 0, 300 )

[node name="Plateform_death4" parent="." instance=ExtResource( 11 )]
position = Vector2( 1048, 352 )

[node name="Plateform_death3" parent="." instance=ExtResource( 11 )]
position = Vector2( 1800, 240 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TutoTraitement" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD_deplacement" type="VBoxContainer" parent="CanvasLayer/TutoTraitement"]
anchor_right = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="HBoxContainer" parent="CanvasLayer/TutoTraitement/HUD_deplacement"]
margin_right = 1024.0
margin_bottom = 64.0
alignment = 1

[node name="HPLabel" type="Label" parent="CanvasLayer/TutoTraitement/HUD_deplacement/HP"]
margin_left = 190.0
margin_right = 834.0
margin_bottom = 64.0
theme = SubResource( 7 )
custom_colors/font_color = Color( 0.768627, 0.67451, 0.611765, 1 )
custom_fonts/font = SubResource( 8 )
text = "Bouger le chat de gauche a droite"
align = 1

[node name="HUD_saut" type="VBoxContainer" parent="CanvasLayer/TutoTraitement"]
anchor_right = 1.0
margin_bottom = 64.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="HBoxContainer" parent="CanvasLayer/TutoTraitement/HUD_saut"]
margin_right = 1024.0
margin_bottom = 64.0
alignment = 1

[node name="HPLabel" type="Label" parent="CanvasLayer/TutoTraitement/HUD_saut/HP"]
margin_left = 306.0
margin_right = 718.0
margin_bottom = 64.0
theme = SubResource( 7 )
custom_colors/font_color = Color( 0.768627, 0.67451, 0.611765, 1 )
custom_fonts/font = SubResource( 8 )
text = "Faite sauter le chat :"
align = 1

[node name="HUD_changer_monde" type="VBoxContainer" parent="CanvasLayer/TutoTraitement"]
anchor_right = 1.0
margin_bottom = 64.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="HBoxContainer" parent="CanvasLayer/TutoTraitement/HUD_changer_monde"]
margin_right = 1024.0
margin_bottom = 64.0
alignment = 1

[node name="HPLabel" type="Label" parent="CanvasLayer/TutoTraitement/HUD_changer_monde/HP"]
margin_left = 192.0
margin_right = 832.0
margin_bottom = 64.0
theme = SubResource( 7 )
custom_colors/font_color = Color( 0.768627, 0.67451, 0.611765, 1 )
custom_fonts/font = SubResource( 8 )
text = "Faite changer de dimention le chat"
align = 1

[node name="AButton" type="Sprite" parent="CanvasLayer/TutoTraitement"]
position = Vector2( 760, 120 )
texture = ExtResource( 15 )

[node name="RT_button" type="Sprite" parent="CanvasLayer/TutoTraitement"]
position = Vector2( 760, 120 )
texture = ExtResource( 17 )

[node name="Dpad" type="Sprite" parent="CanvasLayer/TutoTraitement"]
position = Vector2( 760, 120 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 19 )
